# r2-cli

./: .env.example  Cargo.toml  LICENSE  Makefile  README.md  install.sh  release.sh  uninstall.sh
.github/workflows/: release.yml
src/: config.rs  main.rs  r2_client.rs
