[package]
name = "r2-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
aws-config = "1.3.7"
aws-sdk-s3 = "1.14.0"
aws-types = "1.3.7"
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
aws-smithy-runtime-api = "1.8.0"
aws-smithy-types = "1.3.1"
indicatif = "0.17.11"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"
dialoguer = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
